crates/fig-parser/tests/snapshots/integration_tests__functions__namespaced_methods.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Vector2
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: F64
          visibility: Default
          annotations: []
        - name: y
          ty: F64
          visibility: Default
          annotations: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vector2
            generic_args: []
        name: new
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: F64
          - name: y
            ty: F64
        return_types:
          - Path:
              path:
                segments:
                  - Vector2
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vector2
            generic_args: []
        name: zero
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - Vector2
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vector2
            generic_args: []
        name: len
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params: []
        return_types:
          - F64
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vector2
            generic_args: []
        name: dot
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params:
          - name: other
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Vector2
                    generic_args: []
        return_types:
          - F64
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Vector2
            generic_args: []
        name: add
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params:
          - name: other
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Vector2
                    generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - Vector2
              generic_args: []
      body:
        statements:
          - Pass
