crates/fig-parser/tests/snapshots/integration_tests__functions__no_return_type.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: say_hello
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: do_nothing
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types: []
      body:
        statements:
          - Pass
