crates/fig-parser/tests/snapshots/integration_tests__functions__pointer_parameters.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: fill
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: dst
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type: U8
          - name: val
            ty: U8
          - name: len
            ty: USize
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: copy
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: src
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type: U8
          - name: dst
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type: U8
          - name: len
            ty: USize
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: read_byte
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: ptr
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type: U8
        return_types:
          - U8
      body:
        statements:
          - Pass
