crates/fig-parser/tests/snapshots/integration_tests__functions__return_pointer.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: alloc_byte
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Pointer:
              nullable: false
              mutable: true
              element_type: U8
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: get_ptr
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: data
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type: U8
        return_types:
          - Pointer:
              nullable: false
              mutable: false
              element_type: U8
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: opt_ptr
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Nullable:
              Pointer:
                nullable: false
                mutable: false
                element_type: U8
      body:
        statements:
          - Pass
