crates/fig-parser/tests/snapshots/integration_tests__functions__self_parameters.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Counter
      generic_params: []
      requires: []
      fields:
        - name: value
          ty: I32
          visibility: Default
          annotations: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Counter
            generic_args: []
        name: get
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: false
          is_mutable: false
        params: []
        return_types:
          - I32
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Counter
            generic_args: []
        name: increment
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: true
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Counter
            generic_args: []
        name: reset
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: true
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Counter
            generic_args: []
        name: get_ref
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params: []
        return_types:
          - Pointer:
              nullable: false
              mutable: false
              element_type: I32
      body:
        statements:
          - Pass
