crates/fig-parser/tests/snapshots/integration_tests__functions__visibility.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Public
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: pub_fn
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Return:
              Path:
                segments:
                  - x
  - Function:
      signature:
        visibility: Export
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: exported_fn
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Return:
              Path:
                segments:
                  - x
  - Function:
      signature:
        visibility: Private
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: private_fn
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Return:
              Path:
                segments:
                  - x
